# kapitalist

./: .dockerignore  .env  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
doc/: api.md  database.md  todo.md  usecases.md
docker/: .env  Dockerfile  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh
migrations/2018-03-03-203521_create_users/: up.sql
migrations/2018-03-24-170906_create_wallets/: up.sql
migrations/2018-03-26-173207_create_categories/: up.sql
migrations/2019-01-03-102338_create_transactions/: up.sql
src/: auth.rs  cfg.rs  cron.rs  db.rs  db_pool.rs  err.rs  lib.rs  log.rs  main.rs  model.rs  models.rs  request.rs  response.rs  schema.rs  state.rs  transaction.rs  user.rs  util.rs  wallet.rs
src/api/: category.rs  mod.rs  transaction.rs  user.rs  util.rs  wallet.rs
src/database/: executor.rs
src/db/: category.rs  executor.rs  mod.rs  model.rs  schema.rs  transaction.rs  user.rs  wallet.rs
src/endpoint/: user.rs  wallet.rs
src/util/: db.rs  mod.rs
