[package]
name = "kapitalist_backend"
version = "0.1.0"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/1wilkens/kapitalist"

edition = "2018"

[lib]
name = "kapitalist"
path = "src/lib.rs"

[[bin]]
name = "kapitalist"
path = "src/bin/main.rs"

[dependencies]
slog = { version = "2.3" }
#slog = { version = "2.3", features = ["max_level_trace", "release_max_level_warn"] }
slog-async = { version = "2.3", default-features = false }
slog-stdlog = { version = "3.0", default-features = false }
slog-term = { version = "2.4", default-features = false }

dotenv = "0.13"

serde = { version = "1.0", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }

diesel = { version = "1.4", default-features = false, features = ["32-column-tables", "chrono", "postgres"] }

actix = { version = "0.7", default-features = false }
actix-web = { version = "0.7", default-features = false }
futures = "0.1"

jsonwebtoken = "5.0"

libreauth = "0.11"
