[package]
name = "kapitalist"
version = "0.1.0"
authors = ["The kapitalist-app developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kapitalist-app/backend"

edition = "2018"

[lib]
name = "kapitalist"
path = "src/lib.rs"

[[bin]]
name = "kapitalist"
path = "src/bin/main.rs"

[profile.release]
lto = true

[dependencies]
kapitalist_types = { git = "https://github.com/kapitalist-app/types", branch = "develop" }

clap = { version = "2.32", default-features = false, features = ["vec_map"] }
slog = { version = "2.3", features = ["release_max_level_debug"] }
slog-async = { version = "2.3", default-features = false }
slog-stdlog = { version = "3.0", default-features = false }
slog-term = { version = "2.4", default-features = false }

dotenv = "0.13"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", default-features = false, features = ["chrono", "postgres"] }
diesel_migrations = "1.4"

actix = { version = "0.7", default-features = false }
actix-web = { version = "0.7", default-features = false }
futures = "0.1"

jsonwebtoken = "5.0"
libreauth = "0.11"
