[package]
name = "kapitalist"
description = "Kapitalist backend service"
version = "0.1.0"
authors = ["The kapitalist-app developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/kapitalist-app/backend"

edition = "2018"

[lib]
name = "kapitalist"
path = "src/lib.rs"

[[bin]]
name = "kapitalist"
path = "src/bin/main.rs"

[profile.release]
lto = true

[dependencies]
kapitalist_types = { git = "https://github.com/kapitalist-app/types", branch = "develop" }

#color-eyre = "0.5"
clap = { version = "2.33", default-features = false, features = ["vec_map"] }
tracing = "0.1"
tracing-subscriber = "0.2"

dotenv = "0.13"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", default-features = false, features = ["chrono", "r2d2", "postgres"] }
diesel_migrations = "1.4"

tokio = { version = "1.7", features = ["full"] }
warp = "0.3"

jsonwebtoken = "7.2"
libreauth = "0.14"
